--- a/org/2020-01-01-wx.org
+++ b/org/2020-01-01-wx.org
@@ -28,3 +28,5 @@ module.exports = {
 }
 #+END_SRC
 * 滚动视图区域(scroll-view)
+* 小程序联系公众号以及别的微信平台功能手段
+创建微信开放平台账号，将对应的小程序、公众号绑到同一个微信开放平台状态，之后获取到的用户凭证除了openId之外，同一开放平台账号下的程序还能获取到同样的unionId，根据unionId字段进行映射，即可将小程序与公众号联系起来
