--- a/org/2020-01-04-svg.org
+++ b/org/2020-01-04-svg.org
@@ -2,6 +2,191 @@
 #+STARTUP: indent
 * 概念
 Scalable Vector Graphics
+SVG的元素和属性必须按标准格式书写，因为XML是区分大小写的（这一点和html不同）
+SVG里的属性值必须用引号引起来，就算是数值也必须这样做。
+svg图形直接标签嵌入网页时，需要定指width="300" height="600"，否则可能超过一定区域就无法在显示
+* 图形
+** 矩形
+x,y定义左上角位置，width和height指定宽度
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
+  style="fill:red;stroke:black;stroke-width:5;opacity:0.5"/>
+</svg>
+#+END_SRC
+** 圆形x
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <circle cx="100" cy="50" r="40" stroke="black"
+  stroke-width="2" fill="red"/>
+</svg>
+#+END_SRC
+** 椭圆
+椭圆与圆很相似。不同之处在于椭圆有不同的x和y半径
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <ellipse cx="300" cy="80" rx="100" ry="50"
+  style="fill:yellow;stroke:purple;stroke-width:2"/>
+</svg>
+#+END_SRC
+** 直线
+起始点 (x1,y1)
+终点 (x2,y2)
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <line x1="0" y1="0" x2="200" y2="200"
+  style="stroke:rgb(255,0,0);stroke-width:2"/>
+</svg>
+#+END_SRC
+** 多边形
+按指定的点进行连线闭合构建多边形
+#+BEGIN_SRC xml
+<svg  height="210" width="500">
+  <polygon points="200,10 250,190 160,210"
+  style="fill:lime;stroke:purple;stroke-width:1"/>
+</svg>
+
+五角星
+<svg height="210" width="500">
+  <polygon points="100,10 40,198 190,78 10,78 160,198"
+  style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />
+</svg>
+#+END_SRC
+** 曲线
+相比于多边形少了最后的闭合连接线
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <polyline points="20,20 40,25 60,40 80,120 120,140 200,180"
+  style="fill:none;stroke:black;stroke-width:3" />
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <polyline points="0,40 40,40 40,80 80,80 80,120 120,120 120,160" style="fill:white;stroke:red;stroke-width:4" />
+</svg>
+#+END_SRC
+** 路径
+最完全的绘图方式
+指定点以及运动的方式，可以绘制各种曲线
+M = moveto
+L = lineto
+H = horizontal lineto
+V = vertical lineto
+C = curveto
+S = smooth curveto
+Q = quadratic Bézier curve
+T = smooth quadratic Bézier curveto
+A = elliptical Arc
+Z = closepath
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <path d="M150 0 L75 200 L225 200 Z" />
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <path id="lineAB" d="M 100 350 l 150 -300" stroke="red"
+  stroke-width="3" fill="none" />
+  <path id="lineBC" d="M 250 50 l 150 300" stroke="red"
+  stroke-width="3" fill="none" />
+  <path d="M 175 200 l 150 0" stroke="green" stroke-width="3"
+  fill="none" />
+  <path d="M 100 350 q 150 -300 300 0" stroke="blue"
+  stroke-width="5" fill="none" />
+  <!-- Mark relevant points -->
+  <g stroke="black" stroke-width="3" fill="black">
+    <circle id="pointA" cx="100" cy="350" r="3" />
+    <circle id="pointB" cx="250" cy="50" r="3" />
+    <circle id="pointC" cx="400" cy="350" r="3" />
+  </g>
+  <!-- Label the points -->
+  <g font-size="30" font="sans-serif" fill="black" stroke="none"
+  text-anchor="middle">
+    <text x="100" y="350" dx="-30">A</text>
+    <text x="250" y="50" dy="-10">B</text>
+    <text x="400" y="350" dx="30">C</text>
+  </g>
+</svg>
+#+END_SRC
+** 文本
+#+BEGIN_SRC xml
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <text x="0" y="15" fill="red">I love SVG</text>
+</svg>
+
+<!--旋转文字-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <text x="0" y="15" fill="red" transform="rotate(30 20,40)">I love SVG</text>
+</svg>
+
+<!--路径上的文字-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+xmlns:xlink="http://www.w3.org/1999/xlink">
+   <defs>
+    <path id="path1" d="M75,20 a1,1 0 0,0 100,0" />
+  </defs>
+  <text x="10" y="100" style="fill:red;">
+    <textPath xlink:href="#path1">I love SVG I love SVG</textPath>
+  </text>
+</svg>
+
+<!--几行文字，x,y均属于容器的绝对定位-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <text x="10" y="20" style="fill:red;">Several lines:
+    <tspan x="10" y="45">First line</tspan>
+    <tspan x="10" y="70">Second line</tspan>
+  </text>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+xmlns:xlink="http://www.w3.org/1999/xlink">
+  <a xlink:href="http://www.w3schools.com/svg/" target="_blank">
+    <text x="0" y="15" fill="red">I love SVG</text>
+  </a>
+</svg>
+#+END_SRC
+** stroke属性
+#+BEGIN_SRC xml
+<!--Stroke属性定义一条线，文本或元素轮廓颜色-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <g fill="none">
+    <path stroke="red" d="M5 20 l215 0" />
+    <path stroke="blue" d="M5 40 l215 0" />
+    <path stroke="black" d="M5 60 l215 0" />
+  </g>
+</svg>
+
+<!--stroke- width属性定义了一条线，文本或元素轮廓厚度-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <g fill="none" stroke="black">
+    <path stroke-width="2" d="M5 20 l215 0" />
+    <path stroke-width="4" d="M5 40 l215 0" />
+    <path stroke-width="6" d="M5 60 l215 0" />
+  </g>
+</svg>
+
+<!--stroke-linecap属性定义不同类型的开放路径的终结，控制线的末端形状(圆的或者别的形状)-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <g fill="none" stroke="black" stroke-width="6">
+    <path stroke-linecap="butt" d="M5 20 l215 0" />
+    <path stroke-linecap="round" d="M5 40 l215 0" />
+    <path stroke-linecap="square" d="M5 60 l215 0" />
+  </g>
+</svg>
+
+<!--stroke-dasharray属性用于创建虚线规则，按照指定的一直循环虚线直至末尾-->
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <g fill="none" stroke="black" stroke-width="4">
+    <path stroke-dasharray="5,5" d="M5 20 l215 0" />
+    <path stroke-dasharray="10,10" d="M5 40 l215 0" />
+    <path stroke-dasharray="20,10,5,5,5,10" d="M5 60 l215 0" />
+  </g>
+</svg>
+#+END_SRC
+** 滤镜
+* 网格
+#+BEGIN_SRC xml
+<!--从(0,0)点开始，100宽*100高的区域。这个100*100的区域，会放到200*200的画布上显示。于是就形成了放大两倍的效果。-->
+<svg width="200" height="200" viewBox="0 0 100 100">
+#+END_SRC
 * tag
 ** <defs>
 *** <filter>
