--- a/org/2020-02-09-proxy.org
+++ b/org/2020-02-09-proxy.org
@@ -1,3 +1,5 @@
+#+TITLE: proxy
+#+STARTUP: indent
 * gradle
  ./gradlew -DsocksProxyHost=yourHost -DsocksProxyPort=yourHostPort your-command
 * socket5
